// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View PropertiesPanel rendering should work w/ full props 1`] = `
<div
  className="nice-panel monster-edit__properties"
  id={undefined}
>
  <div
    className="nice-panel-heading"
  >
    Properties
  </div>
  <div
    className="nice-panel-content"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Challenge Rating
      </span>
      <input
        className="nice-form-control"
        disabled={true}
        onChange={[Function]}
        onKeyPress={null}
        placeholder={undefined}
        type="float"
        value={0.25}
      />
      <span
        className="nice-input-addon"
      >
        /
      </span>
      <input
        className="nice-form-control"
        disabled={true}
        onChange={[Function]}
        onKeyPress={null}
        placeholder={undefined}
        type="number"
        value={10}
      />
      <span
        className="nice-input-addon"
      >
        XP
      </span>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Motion
      </span>
      <div
        className="base-tag-container nice-tags-container tag-value-container"
      >
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Add...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="burrow"
              onClick={[Function]}
            >
              <a>
                Burrow
              </a>
            </li>
            <li
              className={null}
              data-value="climb"
              onClick={[Function]}
            >
              <a>
                Climb
              </a>
            </li>
            <li
              className={null}
              data-value="fly"
              onClick={[Function]}
            >
              <a>
                Fly
              </a>
            </li>
          </ul>
        </div>
        <div
          className="nice-tag"
        >
          <span
            className="nice-tag-label"
          >
            Walk
          </span>
          <span
            className="nice-tag-badge"
          >
            <input
              disabled={false}
              onChange={[Function]}
              type="number"
              value={20}
            />
          </span>
          <button
            className="nice-tag-btn"
            onClick={[Function]}
          >
            <i
              className="icon fa-trash-o"
            />
          </button>
        </div>
        <div
          className="nice-tag"
        >
          <span
            className="nice-tag-label"
          >
            Swim
          </span>
          <span
            className="nice-tag-badge"
          >
            <input
              disabled={false}
              onChange={[Function]}
              type="number"
              value={40}
            />
          </span>
          <button
            className="nice-tag-btn"
            onClick={[Function]}
          >
            <i
              className="icon fa-trash-o"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Languages
      </span>
      <div
        className="base-tag-container nice-tags-container"
      >
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Add...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="dwarvish"
              onClick={[Function]}
            >
              <a>
                Dwarvish
              </a>
            </li>
            <li
              className={null}
              data-value="draconic"
              onClick={[Function]}
            >
              <a>
                Draconic
              </a>
            </li>
          </ul>
        </div>
        <div
          className="nice-tag"
        >
          <span
            className="nice-tag-label"
          >
            Common
          </span>
          <button
            className="nice-tag-btn"
            onClick={[Function]}
          >
            <i
              className="icon fa-trash-o"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="nice-form-group"
    >
      <label>
        Traits
      </label>
      <ul
        className="list-component"
      >
        <li>
          <div>
            <input
              className="nice-form-control"
              disabled={undefined}
              onChange={[Function]}
              onKeyPress={null}
              placeholder="Name..."
              type={undefined}
              value="Foo bar"
            />
            <div
              className="markdown-textedit preview"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <textarea
                className="nice-form-control"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Description..."
                rows={5}
                value="Bars _foo_ very well"
              />
              <span
                className="markdown-textedit__preview"
              >
                <p>
                  Bars 
                  <em>
                    foo
                  </em>
                   very well
                </p>
              </span>
            </div>
          </div>
          <button
            className="nice-btn list-component__delete warning icon fa-minus"
            name="del"
            onClick={[Function]}
          >
            ​
          </button>
        </li>
        <li>
          <div>
            <input
              className="nice-form-control"
              disabled={undefined}
              onChange={[Function]}
              onKeyPress={null}
              placeholder="Name..."
              type={undefined}
              value=""
            />
            <div
              className="markdown-textedit preview"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="markdown-textedit__placeholder"
              >
                Description...
              </span>
              <textarea
                className="nice-form-control"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Description..."
                rows={5}
                value=""
              />
              <span
                className="markdown-textedit__preview"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="clearfix"
    />
  </div>
</div>
`;

exports[`View PropertiesPanel rendering should work w/ minimum props 1`] = `
<div
  className="nice-panel monster-edit__properties"
  id={undefined}
>
  <div
    className="nice-panel-heading"
  >
    Properties
  </div>
  <div
    className="nice-panel-content"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Challenge Rating
      </span>
      <input
        className="nice-form-control"
        disabled={true}
        onChange={[Function]}
        onKeyPress={null}
        placeholder={undefined}
        type="float"
        value={0}
      />
      <span
        className="nice-input-addon"
      >
        /
      </span>
      <input
        className="nice-form-control"
        disabled={true}
        onChange={[Function]}
        onKeyPress={null}
        placeholder={undefined}
        type="number"
        value={0}
      />
      <span
        className="nice-input-addon"
      >
        XP
      </span>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Motion
      </span>
      <div
        className="base-tag-container nice-tags-container tag-value-container"
      >
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Add...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="walk"
              onClick={[Function]}
            >
              <a>
                Walk
              </a>
            </li>
            <li
              className={null}
              data-value="burrow"
              onClick={[Function]}
            >
              <a>
                Burrow
              </a>
            </li>
            <li
              className={null}
              data-value="climb"
              onClick={[Function]}
            >
              <a>
                Climb
              </a>
            </li>
            <li
              className={null}
              data-value="fly"
              onClick={[Function]}
            >
              <a>
                Fly
              </a>
            </li>
            <li
              className={null}
              data-value="swim"
              onClick={[Function]}
            >
              <a>
                Swim
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Languages
      </span>
      <div
        className="base-tag-container nice-tags-container"
      >
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Add...
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="common"
              onClick={[Function]}
            >
              <a>
                Common
              </a>
            </li>
            <li
              className={null}
              data-value="dwarvish"
              onClick={[Function]}
            >
              <a>
                Dwarvish
              </a>
            </li>
            <li
              className={null}
              data-value="draconic"
              onClick={[Function]}
            >
              <a>
                Draconic
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="nice-form-group"
    >
      <label>
        Traits
      </label>
      <ul
        className="list-component"
      >
        <li>
          <div>
            <input
              className="nice-form-control"
              disabled={undefined}
              onChange={[Function]}
              onKeyPress={null}
              placeholder="Name..."
              type={undefined}
              value=""
            />
            <div
              className="markdown-textedit preview"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="markdown-textedit__placeholder"
              >
                Description...
              </span>
              <textarea
                className="nice-form-control"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Description..."
                rows={5}
                value=""
              />
              <span
                className="markdown-textedit__preview"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="clearfix"
    />
  </div>
</div>
`;
